# sample_map_server

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
database/: Cargo.toml
database/src/: lib.rs
geojson_reader/: Cargo.toml
geojson_reader/src/: main.rs
map_server/: Cargo.toml
map_server/src/: handlers.rs  lib.rs  main.rs  telemetries.rs
migrations/: 20220710063820_create_prefectures_table.down.sql  20220710063820_create_prefectures_table.up.sql  20220710064823_create_cities_table.up.sql  20220712050242_create_post_offices_table.down.sql  20220712050242_create_post_offices_table.up.sql
register_post_office/: Cargo.toml
register_post_office/src/: main.rs
register_prefecture/: Cargo.toml
register_prefecture/src/: main.rs
register_province/: Cargo.toml
register_province/src/: main.rs
resources/: gifu_post_office_map.qgz  gifu_post_offices.dbf  gifu_post_offices.shp  gifu_post_offices.shx
scripts/: run_containers.sh
spatial/: Cargo.toml
spatial/src/: lib.rs
utils/src/: lib.rs
