[package]
name = "map_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1"
database = { path = "../database" }
dotenvy = "0.15"
sqlx = { version = "0.5", default_features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "time",
    "uuid",
] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
