[package]
name = "map_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1"
actix-cors = "0.6"
database = { path = "../database" }
dotenvy = "0.15"
proj = "0.27"
serde = "1.0"
serde_json = "1.0"
slippy-map-tiles = "0.16"
sqlx = { version = "0.5", default_features = false, features = [
    "json",
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "time",
    "uuid",
] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
utils = { path = "../utils" }
