[package]
name = "register_prefecture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
dotenvy = "0.15"
geo = "0.22"
geojson = { version = "0.23", features = ["geo-types"] }
geo-types = "0.7"
geozero = { version = "0.9.4", features = ["with-postgis-sqlx", "with-wkb"] }
serde_json = "1.0"
# `geozero = "0.9"`は、`sqlx = "0.6"`に対応していない
sqlx = { version = "0.5", default_features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "time",
    "uuid",
] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
regex = "1.6"
